objects/SBQQ__QuoteProcess__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteProcessHelp</customHelpPage>
    <description>Quote process is the parent object for configuration data that drives a particular quote process.</description>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this quote process as default.</description>
        <inlineHelpText>Check to default quote process selector to this process in Line Editor. This only applies when quote process selector is rendered as picklist.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GuidedOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether quotes covered by this process force guided product selection or allow for ad-hoc filtering.</description>
        <inlineHelpText>Select if you want quotes covered by this process forced into guided product selection; otherwise, you allow ad-hoc filtering.</inlineHelpText>
        <label>Guided Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductAutoSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines if product is auto selected if it&apos;s the only one returned by a search.</description>
        <inlineHelpText>Flag that determines if product is auto selected if it&apos;s the only one returned by a search.</inlineHelpText>
        <label>Auto Select Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductConfigurationInitializer__c</fullName>
        <label>Product Configuration Initializer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSearchExecutor__c</fullName>
        <description>Name of VisualForce page that performs custom product search.</description>
        <inlineHelpText>VisualForce page that performs custom product search.</inlineHelpText>
        <label>Product Search Executor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines display order of quote processes in Line Editor (pick list rendering only).</description>
        <inlineHelpText>Check to default quote process selector to this process in Line Editor. This only applies when quote process selector is rendered as picklist.</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Process</label>
    <listViews>
        <fullName>Panel1_QuoteProcess</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <columns>SBQQ__Default__c</columns>
        <columns>SBQQ__ProductAutoSelected__c</columns>
        <columns>SBQQ__GuidedOnly__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>